--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -22,6 +22,14 @@
              {{- partial "breadcrumbs" . }}
            </ol>
          </div>
+         <div class="searchV3">
+           <div class="container">
+             <div class="input-wrapper">
+               <input type="text" id="search-input" placeholder="Search..." class="input" data-search-index-path="" data-search-context="">
+               <div id="search-results" class="results" style="display: none"></div>
+             </div>
+           </div>
+         </div>
        </div>
 
        <div class="layout-sidebar">
